# yapay-zekanin-prensipleri

./: LICENSE  README.md  classifier.py  pyproject.toml
docs/: classified_output.xlsx  solution_documentation.md  v1_f_IT_Department_Sorunlar_.xlsx
