[project]
name = "yapay-zekanin-prensipleri"
version = "0.1.0"
description = "Yapay zekanın prensiplerinde bir içeriğin sınıflandırılması amaçlı hazırlanmış yapay zeka destekli sınıflandırma projesidir."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.16.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
]
